--- a/_posts/2015-04-20-planes.markdown
+++ b/_posts/2015-04-20-planes.markdown
@@ -1,20 +1,43 @@
 ---
-title:  "Planes are cool!"
+title:  "Isle of Edudite!"
 subtitle: "The Fly!"
-author: "Wferr"
+author: "Shibasis"
 avatar: "img/authors/wferr.png"
 image: "img/a.jpg"
 date:   2015-04-20 12:12:12
 ---
+###Isle of Edudite!
+As the first rays of the sun touched the Erudome tower, Princess Ogma sauntered into her beautiful flowered mezzanine, and laid her eyes upon the pale blue sky, for what seemed to be the beginning of just another day. Bestowed with boundless intelligence, wisdom and beauty from birth, she was blessed to the royal Thoth bloodline of the Isle of Erudite, whose pioneers had succumbed to the burns of the volcanic eruption that occurred two billion years ago.
 
-### Dolor sit amet?
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum non mi non pulvinar. Donec tempus risus vel ex fringilla tempor. Vivamus pharetra non mauris quis fermentum. Vestibulum sed maximus elit, sit amet suscipit orci. Morbi at enim at libero dignissim egestas vel ac nisi. Etiam at lectus a arcu sodales consequat. Aliquam consequat ligula sed purus tincidunt, a ultrices nibh dapibus. Phasellus convallis ipsum nec semper ultricies. In facilisis lacus velit, sit amet lacinia velit blandit id. Nullam ut magna erat. Aliquam sit amet dapibus odio, aliquet tempus tortor. Donec in nisi massa.
+“Good Morning Princess! With the bees humming like a golden lyre, the sea breeze wafting pink petals higher, the tower sparkles from its highest spire … oh look! Just arrived – a scroll from the Ring of Fire!” said Anahita, Princess Ogma’s maid. And the Princess knew it’s the carnival. A century has gone by, and it was time for the whole Realm to meet again at Advaita, the Grand Carnival, a symbol of solidarity of the seven islands.
 
-### Aliquam suscipit.
-Cras eget nisl accumsan, porta nisl in, egestas sapien. Vestibulum gravida nulla sed facilisis tempor. Suspendisse maximus nisi sit amet velit sodales fringilla. Vivamus luctus risus eget dui consectetur porttitor. Maecenas ut ultrices orci. Maecenas mollis est eu sodales mollis. Nulla facilisi. Suspendisse eros arcu, elementum sed sem eu, pharetra rhoncus odio. Proin nec tincidunt velit. Cras nisl augue, faucibus sed mauris in, vestibulum mollis nisl. Nam id libero ultrices, consequat ex vitae, convallis nulla.
+“Anahita, send my greetings to the four angels! Tell them, to await my visit! Send for Odin, Oya and the Twins! For the moment of The Great Discourse has arrived!”
 
-Suspendisse lorem odio, blandit at nisl quis, hendrerit tempus tellus. Donec eget leo quis nisi vulputate consectetur. Praesent dignissim enim elit, congue luctus nisl cursus at. Sed rutrum molestie risus. Donec vulputate gravida accumsan. Vivamus tempus ullamcorper eleifend. Sed sagittis mi ut dolor tincidunt, ac rutrum nisi commodo.
+Every year the island witnesses what in itself is the manifestation of profound knowledge. Great scholars, intelligent men, women, flora and fauna (yes, you read it right) travel across the ten lands and twenty seas to attend the famous debate which no court, parliament, council, senate, assembly, cabinet or ministry ever beholds - The Great Discourse. “Sister! I have just the thing that you yearn - the exact statistics of our present economic condition,” said Odin, Ogma’s younger brother, the most accurate economist and mathematician ever known.
 
-Fusce non elit in diam rutrum vestibulum. Donec vitae elementum erat. Praesent elementum eget justo at bibendum. Fusce interdum diam lorem, ut placerat elit pretium quis. Quisque eu urna at quam commodo sagittis. Etiam posuere convallis tincidunt. Phasellus vitae ligula neque. Vivamus a purus at dolor iaculis placerat. Curabitur convallis eu lacus congue sagittis.
+“It’s the Great Discourse I wish to talk to you about. Invite all our learned friends and colleagues! Set the stage right! We must discuss and parley before we set foot on the Ring of Fire.” “The Ring of Fire? You mean it’s time?” asked Odin, unable to hide the excitement in his voice.
 
-Aliquam suscipit fermentum mauris a accumsan. In facilisis, mauris quis pulvinar tempus, turpis sapien sodales nibh, nec feugiat augue est quis nisi. Fusce eget odio feugiat, luctus quam et, dapibus nulla. Sed ornare lacus non libero lacinia pretium. In eu dui vitae purus euismod feugiat ac ac est. Morbi vitae pretium lorem, non eleifend felis. Nullam at massa feugiat, rutrum elit at, semper lacus. Etiam vel rutrum felis. Nullam quis auctor lorem, et tempor arcu.
+Ogma sighed, “Yes, it IS, my dear. And before we depart we have to know it all.” Odin understood that The Great Discourse of this year would be like none before. They had to discuss the welfare of the whole Realm this time before meeting the four angels. Anyone who visited the Ring of Fire would know about the Quadrangelion - the four divine angels that stand guard over the sacred fire there, each of them belonging to a royal bloodline of the Isle of Erudite. Their inscrutable presence in the Ring of Fire was known to none but the Thoth dynasty.
+
+“Good Morning Princess!” said the Twins in unison. Caton and Chiron were undoubtedly the most adored brothers on the island, the former born with an infinite information registry in his brain, the latter, a genius, possessing an innate ability of mind-reading.
+
+“Hello cousins!” greeted Odin. “Our Sister here demands your attention for-” “The Great Discourse!” said Chiron, completing Odin’s sentence. “Go on. Why don’t you tell what’s more to it?” said Odin quietly, his fury enshrouded. Princess Ogma suppressed her laugh. “Brothers! We have no time to lose! Caton and Chiron, I want you both to arrange the whole debate. We have to visit the Ring of Fire this year, so arrange the debate accordingly, from start to finish. Decide the subject, the whole procedure, and the judges. Make arrangements for parchments and ink too. I provide you both a week to settle it all. Now, off I go to see what’s taking my little sister so long!”
+
+Oya, an enfant terrible, the one with velvet gloves delicately concealing iron fists beneath, was young, yet her voracious reading habits had given her abundant knowledge in almost every subject present on the seven lands.
+
+“Oya ! I’ve been looking out for you.” said Ogma. Oya exclaimed, “Sister! I had to finish this book! This talks about the great sailors of our island, their navigation techniques, lifestyles and-” “We don’t have time, Oya! We will be having The Great Discourse next week, and then visit the Ring of Fire! I need you to help Odin with the arrangements. Now, will you please leave that book and get along?”
+
+A week later, the Isle of Erudite welcomed hundreds of scholars, men and women, flora and fauna to witness the event everyone was desperate to behold. As the tower bells rang aloud, the doors to the Erudome court opened. The stage was set. The judges were- Brighid Thoth, the oldest member of the Thoth family; Lugh Neith, the prime minister of the Erudome court; and the lovely princess Ogma. The first round of the event was already over two days before, where the participants had to submit a written document on any topic of their convenience. The three best writings were selected by Odin and Oya, and the corresponding entrants were then cordially invited to the Erudome court to gear up for the great debate. The terrific trio comprised - Sir Mergen, the oldest monk in the Island; Sia, the housemaid of the Neith family; and Nidaba, a famous lioness of the Eru Woods. Anahita graced the dais as host. Caton and Chiron had indeed done their work well.
+
+“Welcome folks to the Erudome towers! We shall now travel on the tides of wit, words, and magic! This evening will bring us the best orator of our three grand finalists! So let’s welcome them with a grand applause! And … here comes the theme –“Anahita waved her voice and fingers, and the words ‘SHOULD ERUDITE JOIN ADVAITA?’ glowing in bright gold sparkled in mid-air. The crowd hooted and thunder of claps followed as the three matched towards the podium.
+
+The next few hours were spellbinding. Sir Mergen and Sia had decided to go against the motion, and came up with valid points like channeling the would-be expenditure rather towards the welfare of the people of all islands instead of towards ‘not-so-important pursuits’. Nidaba decided to opt for the motion, her presence itself intimidating all around her, her words more so. She beautifully explained as to why it is necessary for Erudite to join Advaita. “For the holistic development of the whole realm it must be made mandatory to meet every year and collaborate and discuss business proposals, development strategies, the realm's trade prospects and much more. The six islands must maintain harmony and proper contact with each other for all the Islands to flourish. The recent Scavenger Attack has brought forth the bravado and willingness to cooperate of the islands, and Advaita is its vantage point - the symbol of solidarity.”
+
+Finally, after tense hours of crucial discussion, the judges, impressed by Nidaba’s jingoism for the whole realm, voted her the winner of The Great Discourse-2016. Ogma presented the lioness with a beautiful tiara and made her the Fauna Queen of the Eru Woods.
+
+Later, when the princess and her subjects were packing bags for the carnival, she decided to press the matter of arranging the carnival every year in front of all the other Islands. With this kind motive in her mind, she set forth for the grand carnival - Advaita.
+seoatiiit
+
+ACROPOLIS
+Coming Soon.Please visit [Advaita](www.advaita.io) website for any updates
+seoatiiit
