--- a/_posts/2015-04-22-what-time.markdown
+++ b/_posts/2015-04-22-what-time.markdown
@@ -1,20 +1,65 @@
 ---
-title:  "Watches"
+title:  "Techeon"
 subtitle: "The Bigger the better?"
-author: "Wferr"
+author: "Shibasis"
 avatar: "img/authors/wferr.png"
 image: "img/c.jpg"
 date:   2015-04-22 12:12:12
 ---
+###Techeon
+Seated on a solid confinement of plasma that hovered over a giant magnetic bar, Mr. Leonard Newburg sipped his morning cup of coffee, pondering over the work to be done in the Techeon Parliament today - from passing a few legislator bills, to starting the functioning of the radiation protection umbrella in the housing societies, attending a conference on combating terrorism, with the Isle of Athlon, and inaugurating a swimming pool in the snake ring corner (not just any pool, but an enormous one holding super fluids at would enable the pool to hover some 200 feet above mean ground level).
 
-### Dolor sit amet?
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum non mi non pulvinar. Donec tempus risus vel ex fringilla tempor. Vivamus pharetra non mauris quis fermentum. Vestibulum sed maximus elit, sit amet suscipit orci. Morbi at enim at libero dignissim egestas vel ac nisi. Etiam at lectus a arcu sodales consequat. Aliquam consequat ligula sed purus tincidunt, a ultrices nibh dapibus. Phasellus convallis ipsum nec semper ultricies. In facilisis lacus velit, sit amet lacinia velit blandit id. Nullam ut magna erat. Aliquam sit amet dapibus odio, aliquet tempus tortor. Donec in nisi massa.
+“Just another busy day …” breathed Mr. Newburg; little did he know what was in store for him …
 
-### Aliquam suscipit.
-Cras eget nisl accumsan, porta nisl in, egestas sapien. Vestibulum gravida nulla sed facilisis tempor. Suspendisse maximus nisi sit amet velit sodales fringilla. Vivamus luctus risus eget dui consectetur porttitor. Maecenas ut ultrices orci. Maecenas mollis est eu sodales mollis. Nulla facilisi. Suspendisse eros arcu, elementum sed sem eu, pharetra rhoncus odio. Proin nec tincidunt velit. Cras nisl augue, faucibus sed mauris in, vestibulum mollis nisl. Nam id libero ultrices, consequat ex vitae, convallis nulla.
+Mr. Leonard Newburg has served as President of Techeon Isle for the past 2 million years. Born to a human mother and an android father, he was technically a cyborg. A hardworking, trustworthy and amicable man, he held knowledge of the past and present of Techeon on his fingertips; his flawless personality and presidential skills ensured that he was never voted out of power.
 
-Suspendisse lorem odio, blandit at nisl quis, hendrerit tempus tellus. Donec eget leo quis nisi vulputate consectetur. Praesent dignissim enim elit, congue luctus nisl cursus at. Sed rutrum molestie risus. Donec vulputate gravida accumsan. Vivamus tempus ullamcorper eleifend. Sed sagittis mi ut dolor tincidunt, ac rutrum nisi commodo.
+After finishing his hot coffee, Mr. Leonard Newburg teleported to his office. He then sat down to complete the day’s work. He passed his pending bills, activated the radiation protection umbrella, and inaugurated the swimming pool. But, just stepping into the conference room, he beheld a most terrifying sight – the golden sun turned green!
 
-Fusce non elit in diam rutrum vestibulum. Donec vitae elementum erat. Praesent elementum eget justo at bibendum. Fusce interdum diam lorem, ut placerat elit pretium quis. Quisque eu urna at quam commodo sagittis. Etiam posuere convallis tincidunt. Phasellus vitae ligula neque. Vivamus a purus at dolor iaculis placerat. Curabitur convallis eu lacus congue sagittis.
+All the people came out of their houses wondering what was going on. It was not an eclipse - the sun was being hijacked by the most dreaded terrorist group, The Scavengers, from the Apostle galaxy! Their planet orbited no sun of its own, so these space pirates captured stellar essence from the suns of other solar systems. A chemical that switched off solar fusion aided the Scavengers in shipping off whole stars to their galaxy, and there they would feast on the harvested energy until they needed to harness anew. Nobody had the courage to fight against these dreadnoughts.
 
-Aliquam suscipit fermentum mauris a accumsan. In facilisis, mauris quis pulvinar tempus, turpis sapien sodales nibh, nec feugiat augue est quis nisi. Fusce eget odio feugiat, luctus quam et, dapibus nulla. Sed ornare lacus non libero lacinia pretium. In eu dui vitae purus euismod feugiat ac ac est. Morbi vitae pretium lorem, non eleifend felis. Nullam at massa feugiat, rutrum elit at, semper lacus. Etiam vel rutrum felis. Nullam quis auctor lorem, et tempor arcu.
+Mr. Newburg immediately sprang into action. The radiation protection umbrellas were first armed. The Artemis Vanguard units launched fission cluster-cores on the invaders, while the airborne Marshalls piloted giant Mark-15 warships towards the multitude of Scavenger drones. Solstine, a chemical for solar revival was projected into the sun’s chromosphere.
+
+Nothing worked. The suicide bombers of the Scavengers projected themselves at light-speed, and the resulting explosions produced over a billion megatons of energy, enough to put supernovae to shame. The whole Island of Techeon was in chaos. People were suffering.
+
+Just at the brink of total despair, Shutter Island established communication links with Techeon. Mr. Newburg realized that collaboration was the only way out. The king of the Shutter Island told them about their secret implement - Shutter Rock. Mr. Newburg could not believe his ears when he heard what the Rock could do. Trusting the Shutter-Islanders was a huge leap of faith. But he had run out of options. The Techeon strategists instantly joined hands with Shutter Island and charted a plan - the good old distract-and-hit-hard strategy.
+
+The whole island of Techeon was on fire, the other islands were helping as well but without much success. The Techeon then collected all their nuclear weapons and decided to go all out at the Scavengers. They knew they could hold them only for a few minutes, but the risk was worth it. Their counter-attack started … and with it started the ‘Illusion’, which the Scavengers failed to decode. Busy reducing the Techeon warships to rubble, the Scavengers realized too late that the strategists had decided to divert half their forces to attack from back. The plan worked like magic; the Scavengers could not believe their optics. There was no possible way it could have happened. But the Illusion was too strong for even their surveillance craft to differentiate. The war finally ended after a year of tiring strife and devastation.
+
+It took seven weeks for the sun to shine anew, and life was restored to normalcy. Mr. Leonard heaved a sigh of relief. He immediately ordered making a force field around the planet to prevent any further attacks from the scavengers. For now, it was time for some celebration.
+
+They agreed to the proposal of Advaita put forward by the Shutter Island and immediately relayed the messages to the other islands. The Techeon islanders, or Techiodes, decided to showcase their latest scientific exhibits in the carnival. Their fellow islanders would definitely be awestruck with their inventions. It was the beginning of a new age for the Ring - the age of unity.
+
+Close
+BOTSUMO
+An event in which the bots are driven to fight and drive their opponent beyond the ring to gain the inevitable victory.
+[Read More](www.advaita.io) 
+seoatiiit
+
+BLUEPRINT
+An online platform for all programmers from around the country to put their coding skills under test
+[Read More](www.advaita.io)
+seoatiiit
+
+TECHNOVA
+Oportunity to each and every geek to flaunt their technical talent and a platform for the tech enthusiasts to display their technical skills and innovative ideas.
+[Read More](www.advaita.io)
+seoatiiit
+
+SEO
+SEO is the process of affecting the visibility of a website or a web page in a search engine's unpaid results—often referred to as "natural," "organic," or "earned" results.
+[Read More](www.advaita.io)
+seoatiiit
+
+SWITCH CODING
+Teams of two from different academic grades participate to solve a given problem in turns without mutual communication
+[Read More](www.advaita.io)
+
+GRID SOLVER
+This event is all about reaching your destination through the shortest path possible by facing all the obstacles that is going to come on your way, using a fully automated bot.
+[Read More](www.advaita.io)
+seoatiiit
+
+PAPER PRESENTATION
+A platform where participants get the opportunity to present and explain their technical paper.
+[Read More](www.advaita.io)
+seoatiiit
