--- a/_posts/2015-04-23-night-sky.markdown
+++ b/_posts/2015-04-23-night-sky.markdown
@@ -1,20 +1,38 @@
 ---
-title:  "Absense of light"
+title:  "Rings Of Fire"
 subtitle: "Only lights from space"
-author: "Wferr"
+author: "Shibasis"
 avatar: "img/authors/wferr.png"
 image: "img/d.jpg"
 date:   2015-04-23 12:12:12
 ---
 
-### Dolor sit amet?
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum non mi non pulvinar. Donec tempus risus vel ex fringilla tempor. Vivamus pharetra non mauris quis fermentum. Vestibulum sed maximus elit, sit amet suscipit orci. Morbi at enim at libero dignissim egestas vel ac nisi. Etiam at lectus a arcu sodales consequat. Aliquam consequat ligula sed purus tincidunt, a ultrices nibh dapibus. Phasellus convallis ipsum nec semper ultricies. In facilisis lacus velit, sit amet lacinia velit blandit id. Nullam ut magna erat. Aliquam sit amet dapibus odio, aliquet tempus tortor. Donec in nisi massa.
+### Rings of fire
+Billions of years ago, in a galaxy light years away, there existed the Ring of Fire – a group of massive islands, home to the most intelligent life forms of the universe. Some attribute its existence to the supernatural, claiming it to be a miracle. It is difficult to even comprehend how a chunk of land orbiting near a star could herald the most advanced species of the universe. The inhabitants had created a utopian civilization where people excelled in all fields - science, sports, literature - name it and you will find a Ring islander seated at the pinnacle.
 
-### Aliquam suscipit.
-Cras eget nisl accumsan, porta nisl in, egestas sapien. Vestibulum gravida nulla sed facilisis tempor. Suspendisse maximus nisi sit amet velit sodales fringilla. Vivamus luctus risus eget dui consectetur porttitor. Maecenas ut ultrices orci. Maecenas mollis est eu sodales mollis. Nulla facilisi. Suspendisse eros arcu, elementum sed sem eu, pharetra rhoncus odio. Proin nec tincidunt velit. Cras nisl augue, faucibus sed mauris in, vestibulum mollis nisl. Nam id libero ultrices, consequat ex vitae, convallis nulla.
+The Ring basically consisted of huge concentric land masses separated by moats and linked by canals flowing with super-dense space. At the centre of the Ring stood a giant dormant volcano. Each of the six landmasses of the Ring was called an Isle. People from each Isle excelled in one of many vocations - The Techiodes from Techeon Isle were the pioneers of science and technology; Athlon trained star sportsmen; Shutter Island was home to the Shutterbugs, the most creative people of the Ring who were also master film-makers and photographers; Euphoria enriched minds with artistes and exponents of music and dance, while Erudite was the land of genesis of great scholars of literature and extempore. Besides, there were the cheerful Merrymakers from Funola, whose main aim in life was to be happy and make merry.
 
-Suspendisse lorem odio, blandit at nisl quis, hendrerit tempus tellus. Donec eget leo quis nisi vulputate consectetur. Praesent dignissim enim elit, congue luctus nisl cursus at. Sed rutrum molestie risus. Donec vulputate gravida accumsan. Vivamus tempus ullamcorper eleifend. Sed sagittis mi ut dolor tincidunt, ac rutrum nisi commodo.
+Everything was going good till an energy crisis hit the Ring. A civilization as big and advanced as the Ring requires a lot of energy. The Islanders had every technology of energy production perfected, but with great prosperity comes great energy demands. They went on innovating and engineering new ways to harness energy from various sources. But they knew that they were going to hit rock bottom.
 
-Fusce non elit in diam rutrum vestibulum. Donec vitae elementum erat. Praesent elementum eget justo at bibendum. Fusce interdum diam lorem, ut placerat elit pretium quis. Quisque eu urna at quam commodo sagittis. Etiam posuere convallis tincidunt. Phasellus vitae ligula neque. Vivamus a purus at dolor iaculis placerat. Curabitur convallis eu lacus congue sagittis.
+It was high time when they recognized the mounting energy signatures from the dormant volcano. They very well understood the risk of encountering a deadly volcanic explosion. But looking at the pressures of the rising energy crises, the Isles decided to have a go at it. They sent their best miners and engineers to work. But Murphy's Law came into action again. The dormant volcano erupted, causing massive earthquakes and shockwaves that flung each Isle far away. Millions of lives were lost. Whole landscapes were wiped out. In mere seconds, every accomplishment of theirs was reduced to rubble.
 
-Aliquam suscipit fermentum mauris a accumsan. In facilisis, mauris quis pulvinar tempus, turpis sapien sodales nibh, nec feugiat augue est quis nisi. Fusce eget odio feugiat, luctus quam et, dapibus nulla. Sed ornare lacus non libero lacinia pretium. In eu dui vitae purus euismod feugiat ac ac est. Morbi vitae pretium lorem, non eleifend felis. Nullam at massa feugiat, rutrum elit at, semper lacus. Etiam vel rutrum felis. Nullam quis auctor lorem, et tempor arcu.
+The Isles blamed each other for what was termed as The Great Rift. They decided to never meet, and all lines of communication were severed. The Ring of Fire was now just the dormant volcano and the surrounding landmass, formed from the solidified plasma erupted from the volcanic cone. The Isles were now six distant, disconnected entities floating in empty space, each island considering the others as inexistent.
+
+As time passed, each island became the master in their respective vocations. However, the idea of resuming inter-island communication was limited to books, debates and documentaries, even a billion years after the Great Rift.
+
+Everything changed when the sun turned green....
+
+PRONITE
+The one who sets the stage ablaze with his signature voice, Raghu Dixit.
+[Read More](www.advaita.io)
+seoatiiit
+
+TECHNOVA
+Oportunity to each and every geek to flaunt their technical talent and a platform for the tech enthusiasts to display their technical skills and innovative ideas.
+[Read More](www.advaita.io)
+seoatiiit
+
+EDM Nite
+One of the best forms of entertainment is dancing to the rhythm of ELECTRONIC DANCE MUSIC.
+[Read More](www.advaita.io)
+seoatiiit
