--- a/_posts/2015-04-24-i-scream.markdown
+++ b/_posts/2015-04-24-i-scream.markdown
@@ -1,20 +1,47 @@
 ---
-title:  "I scream"
+title:  "Shutter Island"
 subtitle: "But do you scream?"
-author: "Wferr"
+author: "Shibasis"
 avatar: "img/authors/wferr.png"
 image: "img/e.jpg"
 date:   2015-04-24 12:12:12
 ---
 
-### Dolor sit amet?
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum non mi non pulvinar. Donec tempus risus vel ex fringilla tempor. Vivamus pharetra non mauris quis fermentum. Vestibulum sed maximus elit, sit amet suscipit orci. Morbi at enim at libero dignissim egestas vel ac nisi. Etiam at lectus a arcu sodales consequat. Aliquam consequat ligula sed purus tincidunt, a ultrices nibh dapibus. Phasellus convallis ipsum nec semper ultricies. In facilisis lacus velit, sit amet lacinia velit blandit id. Nullam ut magna erat. Aliquam sit amet dapibus odio, aliquet tempus tortor. Donec in nisi massa.
+### Shutter Island.
+One fine morning, Mr. Steve McCurry, focusing hard on his camera, attempted to get a perfect snapshot of the island’s most beautiful monument - The Shutter Rock. Existing from before the Great Rift, the Rock was rumored to be as old as the Ring of Fire itself. But nobody knew how the giant shutter shaped rock came into being. The shutter in front of the rock was clearly unnatural, with engineers claiming it to possess moving parts and inexplicable mechanisms. Nobody knew what Mr. McCurry knew...
 
-### Aliquam suscipit.
-Cras eget nisl accumsan, porta nisl in, egestas sapien. Vestibulum gravida nulla sed facilisis tempor. Suspendisse maximus nisi sit amet velit sodales fringilla. Vivamus luctus risus eget dui consectetur porttitor. Maecenas ut ultrices orci. Maecenas mollis est eu sodales mollis. Nulla facilisi. Suspendisse eros arcu, elementum sed sem eu, pharetra rhoncus odio. Proin nec tincidunt velit. Cras nisl augue, faucibus sed mauris in, vestibulum mollis nisl. Nam id libero ultrices, consequat ex vitae, convallis nulla.
+Mr. McCurry used to start his day with the view of the rock, for it was a gift to him from his father, the late King Ansel Adams. After the old king’s death, few were convinced that little Steve could handle the responsibility. But his very first public documentary instilled belief and confidence in the citizens. After that, he never looked back. The island has flourished under the young new king, and their photo and film output per year increased manifold. Steve had no idea that the last day of his new film-shoot would be unusually busier than any other before …
 
-Suspendisse lorem odio, blandit at nisl quis, hendrerit tempus tellus. Donec eget leo quis nisi vulputate consectetur. Praesent dignissim enim elit, congue luctus nisl cursus at. Sed rutrum molestie risus. Donec vulputate gravida accumsan. Vivamus tempus ullamcorper eleifend. Sed sagittis mi ut dolor tincidunt, ac rutrum nisi commodo.
+It all began when the sun turned green. The Shutterbugs witnessed several Techeon and Scavenger aircrafts crowding their skies and thousands of missiles being fired. But they were no worthy match for the savage rampaging Scavengers.
 
-Fusce non elit in diam rutrum vestibulum. Donec vitae elementum erat. Praesent elementum eget justo at bibendum. Fusce interdum diam lorem, ut placerat elit pretium quis. Quisque eu urna at quam commodo sagittis. Etiam posuere convallis tincidunt. Phasellus vitae ligula neque. Vivamus a purus at dolor iaculis placerat. Curabitur convallis eu lacus congue sagittis.
+Understanding the responsibility of a king, Mr. McCurry immediately flung into action. Firstly, he ordered a squadron to barricade Shutter Island and engage the enemies. Then, the dwellers of the island were controlled and given assurance and courage. The polaroidamine, a gigantic device that flashes polarized light on the enemy and stuns them, was brought into action.
 
-Aliquam suscipit fermentum mauris a accumsan. In facilisis, mauris quis pulvinar tempus, turpis sapien sodales nibh, nec feugiat augue est quis nisi. Fusce eget odio feugiat, luctus quam et, dapibus nulla. Sed ornare lacus non libero lacinia pretium. In eu dui vitae purus euismod feugiat ac ac est. Morbi vitae pretium lorem, non eleifend felis. Nullam at massa feugiat, rutrum elit at, semper lacus. Etiam vel rutrum felis. Nullam quis auctor lorem, et tempor arcu.
+But the Scavengers were found to be faster and sturdier. Just like in Techeon’s case, the Shutterbugs’ attempts were turning futile. The scavengers proved to be very powerful. Shockingly, their suicidal bombings served only to multiply their numbers with every explosive collision. The situation worsened; there was chaos everywhere.
+
+With a heavy heart, Mr. McCurry decided to bring the Shutter Rock into application and unleash its secret, fiercely guarded for several years. The rock was in reality a paranormal device to be used only once in ten millennia. He went to his high-security vault ‘No. 687’ and took out the Control Key. Once the shutter of the rock was opened, it could generate a perfect three-dimensional holographic illusion, perceived by all the senses including the eyes.
+
+The technology in Shutter Island has just touched the pinnacle of holographic film making; to reach the stage of the Shutter Rock would take them a million years more. The cosmos was in danger. It was the high time for the application of the magical device. But to use the device they needed a distraction, and Shutter Island lacked the needful resources. They could not ask for help. So many years had passed since the Isles' last show of unity. But King McCurry had no other way. He opened all communication lines, and voila! Techeon acknowledged their distress call, and together they devised a stratagem.
+
+Techeon would launch a full blown attack at the Scavengers, while the Shutter Rock would form an illusion of a Sun in the Apostle galaxy, now visible due to pan-dimensional rifts caused by the Scavengers’ suicide bombings. Due to the Shutter Rock, the Apostle sun would be so real that no one could tell the difference. They could even sense the heat and light.
+
+The plan was successful. The Scavengers were both routed as well as lured (by the make-believe sun) back to their galaxy. A new colossal display of unison had brought the Isles a victory like never before. To celebrate this, they decided to go back to the Ring of Fire. A word was sent to other islands too. The script writers of Shutter Island named it Advaita – ‘without dual’, ‘unparalleled’. After all it would be the biggest carnival in the Ring's history....
+
+AD Film Making
+In this competitive world where Videos play a vital role of influence, to encourage students to explore the medium of film and use multi-media formats for production, awareness, marketing and audience reach.
+[Read More](www.advaita.io)
+seoatiiit
+
+DUBSMASH
+Advaita 2k16 brings you a competition for Dubsmash videos, most people are using this application now just for fun or laugh so let's take advantage of the situation and make a little competition.
+[Read More](www.advaita.io)
+seoatiiit
+
+NUKKAD
+If you believe in changing the world as it is, then this is the place for you to do it. Act, shout, scream and make people realize the social evils in the society- Halla Bol
+[Read More](www.advaita.io)
+seoatiiit
+
+ONLINE PHOTOGRAPHY
+ADVAITA gives you the chance to showcase your work and compete with some of the best photographers on the big stage.
+[Read More](www.advaita.io)
+seoatiiit
