--- a/_posts/2015-04-25-workshop.markdown
+++ b/_posts/2015-04-25-workshop.markdown
@@ -1,20 +1,30 @@
 ---
-title:  "A Craftsman Workshop"
+title:  "Funola"
 subtitle: "It's always a bit messy"
-author: "Wferr"
+author: "Shibasis"
 avatar: "img/authors/wferr.png"
 image: "img/f.jpg"
 date:   2015-04-25 12:12:12
 ---
 
-### Dolor sit amet?
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vestibulum non mi non pulvinar. Donec tempus risus vel ex fringilla tempor. Vivamus pharetra non mauris quis fermentum. Vestibulum sed maximus elit, sit amet suscipit orci. Morbi at enim at libero dignissim egestas vel ac nisi. Etiam at lectus a arcu sodales consequat. Aliquam consequat ligula sed purus tincidunt, a ultrices nibh dapibus. Phasellus convallis ipsum nec semper ultricies. In facilisis lacus velit, sit amet lacinia velit blandit id. Nullam ut magna erat. Aliquam sit amet dapibus odio, aliquet tempus tortor. Donec in nisi massa.
+###Funola
+The residents of this island are not gifted with any magical powers. They don’t have any governing body. They are free thinkers and love being independent and thus declared themselves as their own leaders.
 
-### Aliquam suscipit.
-Cras eget nisl accumsan, porta nisl in, egestas sapien. Vestibulum gravida nulla sed facilisis tempor. Suspendisse maximus nisi sit amet velit sodales fringilla. Vivamus luctus risus eget dui consectetur porttitor. Maecenas ut ultrices orci. Maecenas mollis est eu sodales mollis. Nulla facilisi. Suspendisse eros arcu, elementum sed sem eu, pharetra rhoncus odio. Proin nec tincidunt velit. Cras nisl augue, faucibus sed mauris in, vestibulum mollis nisl. Nam id libero ultrices, consequat ex vitae, convallis nulla.
+They believe that “Smile is the best way to face every problem, to hide every pain and to crush every fear.” Many of them lost their near and dear ones in the catastrophe caused by the Great Rift, but they all stood determined and spirited. They put constant efforts to bring smiles on each other’s face and live a cheerful and satisfied life. They kept themselves occupied with playing games, performing acts and celebrating. Years passed and one fine morning appeared the guardian angel of peace and appreciated them for the unity and harmony they maintained among themselves and as a regard with great respect christened their island as “Fun-o-Land”. The residents of this island became famous and are admired for boosting high spirits within individuals by organising fun events and sharing glee.
 
-Suspendisse lorem odio, blandit at nisl quis, hendrerit tempus tellus. Donec eget leo quis nisi vulputate consectetur. Praesent dignissim enim elit, congue luctus nisl cursus at. Sed rutrum molestie risus. Donec vulputate gravida accumsan. Vivamus tempus ullamcorper eleifend. Sed sagittis mi ut dolor tincidunt, ac rutrum nisi commodo.
+Little did the merrymakers know that their troubles had not ended. They were busy in preparation of the annual carnival when the sun turned green. The smiles faded.The music stopped.It took seconds for the gloom to take over.They knew something terrible was going to happen. Was one Great Rift not enough? The residents started preparing for doomsday.Everyone returned to their families to say their goodbyes.The end had come AGAIN....
 
-Fusce non elit in diam rutrum vestibulum. Donec vitae elementum erat. Praesent elementum eget justo at bibendum. Fusce interdum diam lorem, ut placerat elit pretium quis. Quisque eu urna at quam commodo sagittis. Etiam posuere convallis tincidunt. Phasellus vitae ligula neque. Vivamus a purus at dolor iaculis placerat. Curabitur convallis eu lacus congue sagittis.
+But to their utter surprise,the sun turned fiery yellow again.It finished just like it had started,in a flash.The celebrations started again. It is rightly said that nothing increases happiness like a surge of gloom. They decided to have the carnival ,bigger and better.But how did it just go away? No one cared about it in Fun-o-Land till they got Athelon's message about the heroics of Techiyon and Shutter Island.
 
-Aliquam suscipit fermentum mauris a accumsan. In facilisis, mauris quis pulvinar tempus, turpis sapien sodales nibh, nec feugiat augue est quis nisi. Fusce eget odio feugiat, luctus quam et, dapibus nulla. Sed ornare lacus non libero lacinia pretium. In eu dui vitae purus euismod feugiat ac ac est. Morbi vitae pretium lorem, non eleifend felis. Nullam at massa feugiat, rutrum elit at, semper lacus. Etiam vel rutrum felis. Nullam quis auctor lorem, et tempor arcu.
+The grateful Fun-o-Landers decided to shift the carnival to the Ring of Fire and also to include the other islands.They too will travel to witness the unprecedented ADVAITA...
+
+
+LA’ FOODINO
+Part of the secret of a success in life is to eat what you like and let the food fight it out inside. So come and enjoy La' Foodino
+[Read More](www.advaita.io)
+seoatiiit
+
+FUN EVENTS
+Advaita'16 along with Odisha Adventures present joyful and thrilling events. Bring out the inner child in you and have a blast!
+[Read More](www.advaita.io)
+seoatiiit
